Fix dark mode link color

--- a/www/public/site.css
+++ b/www/public/site.css
@@ -386,9 +386,10 @@ h4 {
 @media (prefers-color-scheme: dark) {
     :root {
         --text-color: #cdcdcd;
-        --top-bar-bg: hsl(257, 29%, 50%);
-        --header-link-color: #6666ff;
+        --top-bar-bg: #2a2a2a;
+        --header-link-color: hsl(258, 73%, 70%);
         --header-link-hover: #ddd;
+        --h1-color: #1bc6bd;
         --link-color: #1bc6bd;
         --repl-prompt: #0ff4f4;
         --body-bg: #0e0e0f;
